--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -3,6 +3,8 @@
 
 .footer {
   text-align: center;
+  padding: 1rem;
+  border-top: 1px solid var(--border-first);
 
   &__link {
     color: var(--accent-first);
