Add service worker registration script and move sw.js to static root
- Added service worker registration script in head/script.html
- Moved sw.js from static/js/ to static/ for proper service worker scope

--- a/layouts/partials/head/script.html
+++ b/layouts/partials/head/script.html
@@ -1,7 +1,7 @@
 <script defer>
   if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-          navigator.serviceWorker.register('{{ "js/sw.js" | relURL }}').then(reg => {
+          navigator.serviceWorker.register('{{ "sw.js" | relURL }}').then(reg => {
               console.log('Service worker registered with scope: ', reg.scope);
           }, err => {
               console.log('Service worker registration failed: ', err);
