feat: improve typography and add custom render hooks
- Updated `_icon.scss` and `_typography.scss` for better styling.
- Modified `hugo.toml` configuration for enhanced defaults.
- Added `render-heading.html` and `render-link.html` for custom markup rendering.

--- a/assets/sass/base/_icon.scss
+++ b/assets/sass/base/_icon.scss
@@ -80,3 +80,6 @@
 .bi-exclamation-triangle-fill::before{content: "\F33A";}
 .bi-braces::before{content: "\F1C9";}
 .bi-translate::before{content: "\F658";}
+
+.bi-hash::before{content: "\F40A";}
+.bi-link::before{content: "\F471";}
