fix: update button styles in _btn.scss
- Adjusted padding and margin for better alignment.
- Improved hover effect for better user experience.

--- a/assets/sass/components/_btn.scss
+++ b/assets/sass/components/_btn.scss
@@ -45,6 +45,11 @@
   &--folder {
     width: 100%;
     font-size: v.$font__size--sm;
+    background-color: var(--bg-second);
+  }
+
+  &--file {
+    border: none;
   }
 
   // MODIFIER btn--breadcrumb
