--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -1,57 +1,58 @@
 @use "../abstracts/mixins" as m;
 @use "../abstracts/variables" as v;
+
 //========================== IMAGE FLOAT
 .image {
-  margin: 1rem 0;
+  margin: 1rem;
   position: relative;
-  &--full img {
-    width: 100%;
-    display: block;
-  }
-
-  &--center {
-    text-align: center;
-
-    img {
-      display: inline-block;
-    }
-  }
-
-  &--left,
-  &--right {
-    float: left;
-    margin-right: 1rem;
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-  }
-
-  &--right {
-    float: right;
-    margin-left: 1rem;
-    margin-right: 0;
-  }
-
-  &__caption {
-    max-width: 100%;
-    font-size: 0.9rem;
-    color: var(--text-third);
-    text-align: center;
-    margin-top: 0.5rem;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
   img {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
     box-shadow: var(--shadow-lg);
+    display: inline-block;
+  }
+
+  &--left,
+  &--right {
+    max-width: 320px;
+  }
+  
+  &--left{
+    float: left;
+    align-items: start;
+    text-align: left;
+  }
+
+  &--right {
+    float: right;
+    align-items: end;
+    text-align: right;
+  }
+
+  &__caption {
+    font-size: 0.9rem;
+    color: var(--text-third);
+    margin-top: 0.5rem;
+    max-width: 320px;
   }
 
   &::after {
     content: "";
     display: table;
     clear: both;
+  }
+
+  @include m.max(md){
+    &--left, 
+    &--right {
+      float: none;
+      display: block;
+    }
   }
 }
