--- a/layouts/_default/_markup/render-link.html
+++ b/layouts/_default/_markup/render-link.html
@@ -1,7 +1,15 @@
-{{- $u := urls.Parse .Destination -}}
-<a href="{{ .Destination | safeURL }}"
-  {{- with .Title }} title="{{ . }}"{{ end -}}
-  {{- if $u.IsAbs }} rel="external noopener noreferrer nofollow" target="_blank" {{ end -}}
->
-  {{- with .Text }}{{ . }}{{ end -}}
-</a>
+{{ $link := .Destination }}
+{{ $isRemote := strings.HasPrefix $link "http" }}
+{{- if not $isRemote -}}
+  {{ $url := urls.Parse .Destination }}
+  {{- if $url.Path -}}
+    {{ $fragment := "" }}
+    {{- with $url.Fragment }}
+      {{ $fragment = printf "#%s" . }}
+    {{ end -}}
+    {{- with .Page.GetPage $url.Path }}
+      {{ $link = printf "%s%s" .RelPermalink $fragment }}
+    {{ end }}
+  {{ end -}}
+{{- end -}}
+<a href="{{ $link | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}{{ if $isRemote }} rel="external noopener noreferrer nofollow" target="_blank" {{ end }}>{{ .Text | safeHTML }}</a>
