--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -204,9 +204,11 @@ dd {
 
   a {
    color: var(--accent-first);
+   text-decoration: none;
 
    &:hover {
     color: var(--accent-second);
+    text-decoration: underline;
    }
   }
 
